--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,13 @@ android {
 }
 
 dependencies {
-
+    implementation 'com.onesignal:OneSignal:[5.1.6, 5.1.99]'
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
     implementation libs.constraintlayout
     implementation libs.firebase.database
+    implementation libs.firebase.messaging
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
@@ -46,9 +47,10 @@ dependencies {
     implementation 'androidx.media3:media3-ui:1.2.0'
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:12.1.0'
 
+    implementation 'com.google.android.gms:play-services-ads:24.3.0'
 
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
 
-
-
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
 
 }
