--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +15,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.RecipeRun"
         tools:targetApi="31">
+        <activity
+            android:name=".ui.viewall.ViewallActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.seeall.SeeAllActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.foodbycategoryActivity.FoodByCategoryActivity"
             android:exported="false" />
@@ -41,6 +48,24 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:exported="false" />
+
+        <service
+            android:name=".fcm.FirebaseMessegeReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/red" />
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="@string/admob_app_id" />
     </application>
 
 </manifest>
